ref and build